--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "webpack",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
-  },
-  "dependencies": {
-    "-": "^0.0.1",
-    "@babel/core": "^7.18.13",
-    "babel-loader": "^8.2.5",
-    "copy-webpack-plugin": "^11.0.0",
-    "D": "^1.0.0",
-    "html-webpack-plugin": "^5.5.0"
-  }
+	"name": "webpack",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "webpack --mode production",
+		"start": "webpack-dev-server --mode development --open",
+		"deploy": "gh-pages -d dist"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"gh-pages": "^4.0.0",
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0",
+		"webpack-dev-server": "^4.10.1"
+	},
+	"dependencies": {
+		"-": "^0.0.1",
+		"@babel/core": "^7.18.13",
+		"babel-loader": "^8.2.5",
+		"copy-webpack-plugin": "^11.0.0",
+		"D": "^1.0.0",
+		"html-webpack-plugin": "^5.5.0"
+	}
 }
